fixed overflow body

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,5 +4,5 @@
     padding: 20px 0;
     text-align: center;
     color: $white;
-    margin-top: 100px;
+    margin-top: 50px;
 }
